# lpbf-optimizer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SUBMISSION.md  environment.yml  pyproject.toml  requirements.txt  todo.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
data/: params.yaml
data/models/20251209_024954/: config.yaml
data/processed/: lpbf_dataset.h5
docs/: contributing-physics-residual.md  data_processing_workflow.md  equations_reference.md  figures.md  flowchart_overview.md  optimization_workflow.md  pinn_model_architecture.md  references.bib  scientific_workflow.md  training_metrics.md
docs/adr/: 0001-pinn-output-choice.md  0002-physics-loss-from-quality-metrics.md  0003-multi-objective-optimizer-choice.md  0004-synthetic-data-strategy.md
docs/research/: literature-survey.md
notebooks/: 01_data_generation.ipynb  02_training.ipynb  03_optimisation.ipynb  04_visualisation.ipynb  complete_workflow_example.ipynb  lpbf_workflow.ipynb
scripts/: benchmark.py  hyperparameter_search.py
src/: __init__.py  api.py  fea_runner.py  generate_synthetic_data.py  infer.py  preprocessing.py
src/data/: lineage.py
src/optimiser/: __init__.py  bayesopt.py  nsga3.py
src/pinn/: __init__.py  ablation.py  loss_balancer.py  model.py  physics.py  trackers.py  train.py  uncertainty.py
src/validate/: __init__.py  build_runner.py  characterise.py  report.py
src/vis/: __init__.py  animate_optimization.py  animate_training.py  animate_training_metrics.py
tests/: test_config.py  test_generate_synthetic_data.py  test_hyperparameter_search.py  test_infer.py  test_lineage.py  test_normalisation.py
tests/data/: ebsd.csv  predictions.csv  stress.csv  xct_porosity.csv
tests/optimiser/: test_bayesopt.py  test_nsga3_robust.py
tests/pinn/: test_ablation.py  test_loss_balancer.py  test_model.py  test_physics.py  test_temperature_head.py  test_trackers.py  test_uncertainty.py
tests/validate/: __init__.py  test_characterise.py
(+7 files in other folders)
